--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@ linklint-*.zip
 linklint/
 .checkstyle
 **/.checkstyle
+
+hbase-build-support/
+
+# recolic
+rbuild/bin
+#rbuild/*.sh
+
+# m2
+/.m2
